WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32736
REGRESSION(
r52233
): MSAA: Accessibility role of lists is wrong
https://bugs.webkit.org/show_bug.cgi?id=32736
Summary
REGRESSION(r52233): MSAA: Accessibility role of lists is wrong
Jon Honeycutt
Reported
2009-12-18 13:04:40 PST
The role of OL and UL elements should be "list" but is "client."
Attachments
patch
(6.02 KB, patch)
2009-12-18 13:48 PST
,
Jon Honeycutt
aroben
: review+
jhoneycutt
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Honeycutt
Comment 1
2009-12-18 13:48:04 PST
Created
attachment 45186
[details]
patch
Jon Honeycutt
Comment 2
2009-12-18 13:50:31 PST
<
rdar://problem/7485753
>
Adam Roben (:aroben)
Comment 3
2009-12-18 14:22:49 PST
Comment on
attachment 45186
[details]
patch r=me
Jon Honeycutt
Comment 4
2009-12-18 16:52:46 PST
Landed in
r52352
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug