REGRESSION(r52233): MSAA: Accessibility role of lists is wrong

https://bugs.webkit.org/show_bug.cgi?id=32736

Reviewed by Adam Roben.

WebCore:

Test: platform/win/accessibility/list-role.html

* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::roleValueForMSAA):
Return roleValue(), rather than m_role, as subclasses may override it.

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::roleValueForMSAA):
Fallback to roleValue(), rather than m_role, as it may be overriden.

LayoutTests:

* platform/win/accessibility/list-role-expected.txt: Added.
* platform/win/accessibility/list-role.html: Added.
Verify that lists return the "list" role.

Canonical link: https://commits.webkit.org/43775@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52352 268f45cc-cd09-0410-ab3c-d52691b4dbfc